# openapi-guis

./: .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
swagger-ui/: Cargo.toml  README.md  update.sh
swagger-ui/src/: lib.rs  oauth.rs
